@@ -1,7 +1,6 @@
 package siani.tara.compiler.semantic;
 
 import siani.tara.Language;
-import siani.tara.TaraCompilerRunner;
 import siani.tara.compiler.core.errorcollection.TaraException;
 import siani.tara.dsl.Proteo;
 
@@ -11,18 +10,16 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.logging.Logger;
 
-import static java.io.File.separator;
-
 public class LanguageLoader {
 	private static final Logger LOG = Logger.getLogger(LanguageLoader.class.getName());
+	private static final String LANGUAGE_PACKAGE = "siani.tara.dsl";
 
 	public static Language load(String name, String languagesDirectory) throws TaraException {
-		if (name.equalsIgnoreCase("Proteo"))
-			return new Proteo();
-		File file = getLanguagePath(name, languagesDirectory);
+		if (name.equalsIgnoreCase("Proteo")) return new Proteo();
 		try {
-			ClassLoader cl = new URLClassLoader(new URL[]{file.toURI().toURL()}, TaraCompilerRunner.class.getClassLoader());
-			Class cls = cl.loadClass("siani.tara.dsl." + name);
+			File jar = getLanguagePath(name, languagesDirectory);
+			ClassLoader cl = new URLClassLoader(new URL[]{new URL("jar:" + jar.toURI().toURL() + "!/")}, LanguageLoader.class.getClassLoader());
+			Class cls = cl.loadClass(LANGUAGE_PACKAGE + "." + name);
 			return (Language) cls.newInstance();
 		} catch (MalformedURLException | ClassNotFoundException e1) {
 			LOG.info(e1.getMessage());
@@ -32,7 +29,7 @@ public class LanguageLoader {
 		}
 	}
 
-	private static File getLanguagePath(String name, String languageDirectory) {
-		return new File(languageDirectory + separator + name);
+	private static File getLanguagePath(String name, String languagesDirectory) {
+		return new File(languagesDirectory + File.separator + name, name + ".jar");
 	}
 }
